# raytracer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: bvh.md  design.md  libraries.md
docs/render_pipelines/: rasteriser.md  raytracer.md
src/: camera.cpp  camera.h  main.cpp  main.h  raytracer.cpp  raytracer.h  resources.cpp  resources.h  scene.cpp  scene.h
src/include/: AABB.h  color.h  geom.h  global_settings.h  mesh.h  random.h  ray.h  texture.h  transform.cpp  transform.h  unique_id.h
src/include/structures/: bvh.cpp  bvh.h
src/lights/: light.cpp  light.h  point_light.cpp  point_light.h
src/loaders/: gltf_loader.cpp  gltf_loader.h  gltf_loader_result.h
src/materials/: material.cpp  material.h
src/renderers/: intersection_result.h  mesh_renderer.cpp  mesh_renderer.h  plane_renderer.cpp  plane_renderer.h  renderer.cpp  renderer.h  sphere_renderer.cpp  sphere_renderer.h
